fixed accesibility menu on mobile

--- a/frontend/assets/css/tailwind.css
+++ b/frontend/assets/css/tailwind.css
@@ -128,3 +128,7 @@ body {
 footer {
   flex-shrink: 0;
 }
+
+.snipcart {
+  z-index: 50;
+}
